Modify test JVM memory settings